Improve mobile display and add fallback to payment form for Samsung devices

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Chillers POS</title>
     <!-- Loads callback javascript -->
     <script type="text/javascript" src="/open_pos.js"></script>
