Add auto-return to original tab after Square transaction completion

--- a/public/callback.html
+++ b/public/callback.html
@@ -39,6 +39,15 @@
       .error {
         border-left-color: #dc3545;
       }
+      .return-message {
+        text-align: center;
+        margin-top: 20px;
+        padding: 15px;
+        background: #e3f2fd;
+        border-radius: 8px;
+        color: #1976d2;
+        font-weight: 500;
+      }
     </style>
   </head>
 
@@ -49,6 +58,10 @@
       <div id="url">
         <!-- Transaction result will be displayed here -->
         Processing transaction result...
+      </div>
+      <div class="return-message">
+        ✅ Transaction processed successfully!<br>
+        Returning to POS system in 3 seconds...
       </div>
     </div>
   </body>
